src/scss/_body.scss
body,html{
  overflow-x: hidden;
  overflow-y: scroll;
  overflow-y: overlay;
  color: #373737;
  font-family: 'Montserrat', sans-serif;
  font-size: 1em;
  @include media('<phone'){
    font-size: 14px;
  }
}
::-webkit-scrollbar-thumb
{
  background-color: #373737;
}
::-webkit-scrollbar
{
  width: 6px;
  background-color: #F5F5F5;
}
::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  background-color: #F5F5F5;
}
body{
  &:before{
    background-image: url('../assets/img/bg.png');
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1;
    height: 100vh;
    width: 100vw;
    @include media('<tablet'){
      background-image: url('../assets/img/bg_mid.png');
    }
    @include media('<phone'){
      background-image: url('../assets/img/bg_min.png');
    }
  }
}
@keyframes spin{
  0%{
    transform: translate(-50%, -50%) rotate(0deg);
  }
  100%{
    transform: translate(-50%, -50%) rotate(360deg);
  }
}
.loader{
  position: relative;
  z-index: 99999;
  transition: .2s ease-out;
  &:after{
    content: '';
    width: 32px;
    height: 32px;
    position: fixed;
    left: 32px;
    z-index: 10;
    top: 32px;
    border-top: 2px solid #373737;
    border-radius: 50%;
    animation: spin 1s ease-in-out infinite;
  }
  &.loaded{
    opacity: 0;
    pointer-events: none;
  }
}
html.sr .load-hidden{
  visibility: hidden;
}
.app_container{
  position: relative;
}
section{
  height: 100vh;
  min-height: 100%;
  min-height: 100vh;
  width: 100vw;
  position: relative;
}
.container{
  max-width: 1200px;
  margin: 0 auto;
  height: 100%;
  width: 100%;
}

.title-wrapper{
  span{
    display: inline-block;
    &.break{
      width: 5px;
      display: inline-block;
      opacity: 0;
    }
  }
}

h2{
  width: 100%;
  font-size: 2em;
  padding: 0 0 15px 10px;
  margin-bottom: 15px;
  box-sizing:border-box;
  font-weight: 700;
  color: #373737;
  position: relative;
  @include media('<phone'){
    text-align: center;
  }
  @include media('<340px'){
    font-size: 1.75em;
    padding: 0 0 5px 10px;
    margin-bottom: 10px;
  }
}

